add button for list

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>JS practice</title>
+    <title>JS practice_1</title>
 </head>
 <body>
+    <button class="button" onclick="document.getElementById('navy').innerHTML=ffa(ar)">Нажми на меня</button>
+    <span id="navy"></span>
     <script src="js/practiceTask1.js"></script>
 </body>
 </html>
