add style ".closed" for button action

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button class="button" onclick="document.getElementById('navy').innerHTML=ffa(ar)">Нажми на меня</button>
-    <span id="navy"></span>
+    <span id="navy" class="closed"></span>
     <script src="js/practiceTask1.js"></script>
 </body>
 </html>
